--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Django==2.2
 django-cors-headers==3.7.0
 djangorestframework==3.12.4
 psycopg2-binary==2.8.6
+python-dotenv==0.19.0
 pytz==2021.1
 sqlparse==0.4.1
 whitenoise==5.3.0
