--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,59 @@
-Django==2.2
+amqp==5.0.6
+asgiref==3.4.1
+attrs==21.2.0
+autobahn==21.3.1
+Automat==20.2.0
+billiard==3.6.4.0
+boto3==1.18.15
+botocore==1.21.15
+celery==5.1.2
+certifi==2021.5.30
+cffi==1.14.6
+channels==3.0.4
+charset-normalizer==2.0.4
+click==7.1.2
+click-didyoumean==0.0.3
+click-plugins==1.1.1
+click-repl==0.2.0
+constantly==15.1.0
+cryptography==3.4.7
+daphne==3.0.2
+Django==3.2.6
 django-cors-headers==3.7.0
+django-jsonfield==1.4.1
 djangorestframework==3.12.4
+djangorestframework-jwt==1.11.0
+hyperlink==21.0.0
+idna==3.2
+incremental==21.3.0
+jmespath==0.10.0
+jsonfield==3.1.0
+kombu==5.1.0
+numpy==1.21.1
+pandas==1.3.1
+prompt-toolkit==3.0.19
 psycopg2-binary==2.8.6
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
+PyJWT==1.7.1
+pyOpenSSL==20.0.1
+python-dateutil==2.8.2
 python-dotenv==0.19.0
 pytz==2021.1
+redis==3.5.3
+requests==2.26.0
+s3transfer==0.5.0
+service-identity==21.1.0
+six==1.16.0
 sqlparse==0.4.1
+Twisted==21.7.0
+txaio==21.2.1
+typing-extensions==3.10.0.0
+urllib3==1.26.6
+vine==5.0.0
+wcwidth==0.2.5
+websockets==9.1
 whitenoise==5.3.0
+xmltodict==0.12.0
+zope.interface==5.4.0
