--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -3,6 +3,9 @@ option_settings:
     WSGIPath: backend.wsgi:application
   aws:elasticbeanstalk:environment:proxy:staticfiles:
     /static: static
+  aws:elbv2:listener:443:
+    SSLCertificateArns: arn:aws:acm:ap-southeast-1:556564529410:certificate/9269ab32-e1ac-4892-bb55-e7caa8b27773
+    Protocol: HTTPS
 container_commands:
   01_collectstatic:
     command: "source /var/app/venv/*/bin/activate && python3 manage.py collectstatic --noinput"
@@ -13,3 +16,16 @@ container_commands:
   03_createsu:
     command: "source /var/app/venv/*/bin/activate && python3 manage.py createsu"
     leader_only: true
+Resources:
+    AWSEBV2LoadBalancerListener:
+      Type: 'AWS::ElasticLoadBalancingV2::Listener'
+      Properties:
+        LoadBalancerArn: { "Ref" : "AWSEBV2LoadBalancer" }
+        DefaultActions:
+          - RedirectConfig:
+              Port: 443
+              Protocol: HTTPS
+              StatusCode: HTTP_301
+            Type: redirect
+        Port: 80
+        Protocol: HTTP
