--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ billiard==3.6.4.0
 boto3==1.18.15
 botocore==1.21.15
 celery==5.1.2
+celery-redbeat==2.0.0
 certifi==2021.5.30
 cffi==1.14.6
 channels==3.0.4
@@ -47,6 +48,7 @@ s3transfer==0.5.0
 service-identity==21.1.0
 six==1.16.0
 sqlparse==0.4.1
+tenacity==8.0.1
 Twisted==21.7.0
 txaio==21.2.1
 typing-extensions==3.10.0.0
