--- a/.gitignore
+++ b/.gitignore
@@ -262,3 +262,5 @@ tags
 # End of https://www.toptal.com/developers/gitignore/api/elasticbeanstalk,django,python,visualstudiocode,vim
 
 health_check_storage_test
+data
+*_backup.json
