--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ cryptography==3.4.7
 daphne==3.0.2
 Django==3.2.6
 django-cors-headers==3.7.0
+django-database-size==1.0.4
 django-health-check==3.16.4
 djangorestframework==3.12.4
 djangorestframework-jwt==1.11.0
@@ -65,7 +66,7 @@ s3transfer==0.5.0
 semantic-version==2.8.5
 service-identity==21.1.0
 six==1.14.0
-sqlparse==0.4.1
+sqlparse==0.4.2
 tenacity==8.0.1
 termcolor==1.1.0
 texttable==1.6.4
@@ -73,7 +74,7 @@ tqdm==4.62.0
 Twisted==21.7.0
 txaio==21.2.1
 typing-extensions==3.10.0.0
-urllib3==1.25.11
+urllib3==1.26.7
 vine==5.0.0
 wcwidth==0.1.9
 websocket-client==0.59.0
